force-app/main/default/objects/AA__c/AA__c.object-meta.xml
<CustomObject>
    <label>AA</label>
    <nameField>
        <displayFormat>a-{0000000000}</displayFormat>
        <label>AA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>