force-app/main/default/objects/AA__c/fields/Promotion_Total__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Total__c</fullName>
    <inlineHelpText>sum count child records promotion values</inlineHelpText>
    <label>Promotion Total</label>
    <summarizedField>BB__c.Promotions__c</summarizedField>
    <summaryForeignKey>BB__c.AA__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>