force-app/main/default/objects/AA__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>