force-app/main/default/objects/AA__c/fields/SalesRep_Code__c.field-meta.xml
<CustomField>
    <fullName>SalesRep_Code__c</fullName>
    <label>SalesRep Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>