force-app/main/default/objects/AA__c/fields/Salon_Name__c.field-meta.xml
<CustomField>
    <fullName>Salon_Name__c</fullName>
    <label>Salon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>