force-app/main/default/objects/AA__c/fields/Source_From__c.field-meta.xml
<CustomField>
    <fullName>Source_From__c</fullName>
    <defaultValue>&apos;录入&apos;</defaultValue>
    <label>来源</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>录入</fullName>
            </value>
            <value>
                <fullName>导入</fullName>
            </value>
            <value>
                <fullName>DBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>