force-app/main/default/objects/AA__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>