force-app/main/default/objects/AA__c/fields/test_field__c.field-meta.xml
<CustomField>
    <fullName>test_field__c</fullName>
    <formula>IF( Salon_Name__c = &apos;test&apos;,  TODAY() , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自动填充测试</label>
    <type>Date</type>
</CustomField>