force-app/main/default/objects/AA__c/fields/TestPick__c.field-meta.xml
<CustomField>
    <fullName>TestPick__c</fullName>
    <label>TestPick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>