force-app/main/default/objects/AA__c/validationRules/Testvalidtions.validationRule-meta.xml
<ValidationRule>
    <fullName>Testvalidtions</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( TestPick__c ,&apos;2&apos;) , OR( ISNULL(test__c) , test__c &lt;= 0) )</errorConditionFormula>
    <errorMessage>test is not be null or less than 0</errorMessage>
</ValidationRule>